<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 	android:orientation="vertical"
    tools:context="com.android.fingerprintcallbackdemo.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/hello_world" />
    
    <ProgressBar
        android:id="@+id/progressbar" 
        android:layout_marginTop="30dp"
         style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/enroll"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/action_enroll" />
     <Button
        android:id="@+id/match"
        android:layout_width="0dp"
         android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/action_match" />
      <Button
        android:id="@+id/remove"
        android:layout_width="0dp"
         android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/action_remove" />
      </LinearLayout>
      
      <EditText 
         android:id="@+id/et_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
       	android:gravity="bottom"
        android:hint="@string/action_et_remove"
       />
      
</LinearLayout>
